[project]
name = "mis_finder"
version = "0.2.0"
description = "Python package for finding Max Independent Set in a graph represented as numpy adjacency matrix"
readme = "README.md"
authors = [
    { name = "Aleksander Wojnarowicz", email = "alwojnarowicz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions"
]

[project.optional-dependencies]
dev = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=74.1", "wheel"]
build-backend = "setuptools.build_meta"
